name: Nomyx-Library
version: 0.7.6
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Library of rules for Nomyx
description: Many example of rules ready to be played
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont
--data-files: static/pictures/*.png
--data-dir: data
extra-source-files: AUTHORS README

library
    build-depends: Nomyx-Language     == 0.7.6,
                   base               >= 4.6 && < 5,
                   containers         == 0.5.*,
                   ghc                >= 7.6 && < 7.11,
                   lens               >= 4.7 && < 4.14,
                   mtl                >= 2.1 && < 2.3,
                   old-locale         == 1.0.*,
                   safe               == 0.3.*,
                   time               >= 1.4 && < 1.6,
                   time-recurrence    == 0.9.*
    exposed-modules: Nomyx.Library.Examples
                     Nomyx.Library.Democracy
                     Nomyx.Library.Monarchy
                     Nomyx.Library.PlayerManagement
                     Nomyx.Library.Victory
                     Nomyx.Library.Vote
                     Nomyx.Library.Elections
                     Nomyx.Library.Bank
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
