name: Nomyx-Web
version: 0.7.0
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: Web gui for Nomyx
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files: static/css/nomyx.css 
            static/nomyx.js
            static/pictures/*.jpg
data-dir: data
extra-source-files: README.md
 
library
    build-depends: Nomyx-Language         == 0.7.0,
                   Nomyx-Core             == 0.7.0,
                   base                   >= 4.6 && <5,
                   blaze-html             == 0.7.*,
                   blaze-markup           == 0.6.*,
                   bytestring             == 0.10.*,
                   data-lens              == 2.10.*,
                   data-lens-fd           == 2.0.*,
                   fb                     >= 0.15 && < 2,
                   filepath               == 1.3.*,
                   happstack-authenticate == 0.10.*,
                   happstack-server       == 7.3.*,
                   hscolour               == 1.20.*,
                   mtl                    == 2.1.*,
                   old-locale             == 1.0.*,
                   reform                 == 0.2.*,
                   reform-blaze           == 0.2.*,
                   reform-happstack       == 0.2.*,
                   safe                   == 0.3.*,
                   stm                    == 2.4.*,
                   text                   == 1.1.*,
                   time                   == 1.4.*,
                   web-routes             == 0.27.*,
                   web-routes-happstack   == 0.23.*,
                   web-routes-regular     == 0.19.*,
                   web-routes-th          == 0.22.*
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    exposed-modules:Nomyx.Web.MainPage
                    Paths_Nomyx_Web
    other-modules: Nomyx.Web.Common
                   Nomyx.Web.Help
                   Nomyx.Web.NewGame
                   Nomyx.Web.Game
                   Nomyx.Web.Login
                   Nomyx.Web.Settings
    ghc-options: -W -threaded
 
source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
