name: Nomyx-Web
version: 0.7.6
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: Web gui for Nomyx
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files: static/css/nomyx.css
            static/nomyx.js
            static/pictures/*.jpg
data-dir: data
extra-source-files: README.md

library
    build-depends: Nomyx-Language         == 0.7.6,
                   Nomyx-Core             == 0.7.6,
                   acid-state             == 0.12.*,
                   base                   >= 4.6 && <5,
                   blaze-html             >= 0.7 && < 0.9,
                   blaze-markup           >= 0.6 && < 0.8,
                   bytestring             == 0.10.*,
                   lens                   >= 4.7 && < 4.13,
                   fb                     >= 0.15 && < 2,
                   filepath               >= 1.3 && < 1.5,
                   happstack-authenticate == 2.1.*,
                   happstack-server       >= 7.3 && < 7.5,
                   hscolour               >= 1.22 && < 1.24,
                   jmacro                 -any,
                   mtl                    >= 2.1 && < 2.3,
                   old-locale             == 1.0.*,
                   reform                 == 0.2.*,
                   reform-blaze           == 0.2.*,
                   reform-happstack       == 0.2.*,
                   safe                   == 0.3.*,
                   split                  == 0.2.*,
                   stm                    == 2.4.*,
                   text                   >= 1.1 && < 1.3,
                   time                   >= 1.4 && < 1.6,
                   web-routes             == 0.27.*,
                   web-routes-happstack   == 0.23.*,
                   web-routes-regular     == 0.19.*,
                   web-routes-th          == 0.22.*
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    exposed-modules:Nomyx.Web.MainPage
                    Paths_Nomyx_Web
    other-modules: Nomyx.Web.Common
                   Nomyx.Web.Help
                   Nomyx.Web.Game.Infos
                   Nomyx.Web.Game.Rules
                   Nomyx.Web.Game.IOs
                   Nomyx.Web.Game.NewRule
                   Nomyx.Web.Game.Details
                   Nomyx.Web.Login
                   Nomyx.Web.Settings
                   Nomyx.Web.NewGame
    ghc-options: -W -threaded

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
