name: Nomyx
version: 0.7.3
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: A Nomic game in haskell
description: A Nomic game in Haskell, with a dedicated language to create new rules.
             .
             Nomyx is a fabulous and strange game where you have the right to change the rules in the middle of the game!
             Indeed, changing the rules is the goal of the game. Changing a rule is considered as a move. Of course even that could be changed!
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
extra-source-files: AUTHORS README.md TODO Changelog
 
executable Nomyx
    build-depends: Nomyx-Core             == 0.7.3,
                   Nomyx-Language         == 0.7.3,
                   Nomyx-Web              == 0.7.3,
                   base                   >= 4.6 && <5,
                   directory              == 1.2.*,
                   exceptions             == 0.6.*,
                   filepath               == 1.3.*,
                   hint-server            == 1.4.*,
                   mtl                    == 2.1.*,
                   network                == 2.4.*,
                   safe                   == 0.3.*,
                   stm                    == 2.4.*,
                   time                   == 1.4.*
    main-is: Main.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Main 
    ghc-options: -W -threaded
 
source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
